[build-system]
requires = [
    "hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalsnap"
version = "0.1.7"
authors = [
{ name="Markus Sifft", email="markus.sifft@rub.de" },
]
description = "Spectra at your fingertips"
readme = "README.md"
requires-python = ">=3.7, <3.11"
classifiers = [
 "Development Status :: 2 - Pre-Alpha",
 "Intended Audience :: Science/Research",
 "License :: OSI Approved :: BSD License",
 "Programming Language :: Python",
 "Programming Language :: Python :: 3",
 "Topic :: Scientific/Engineering",
 "Operating System :: OS Independent",
]
dependencies = [
 "numpy >=1.18, <1.24",
 "matplotlib",
 "h5py",
 "arrayfire",
 "numba",
 "scipy",
 "tqdm"
]

[project.urls]
"Homepage" = "https://github.com/MarkusSifft/SignalSnap"
"Bug Tracker" = "https://github.com/MarkusSifft/SignalSnap/issues"

