[build-system]
requires = [
    "hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalsnap"
version = "1.0.18"
dynamic = ["2.3"]
authors = [
{ name="Markus Sifft", email="markus.sifft@rub.de" },
]
description = "Spectra at your fingertips"
readme = "README.md"
requires-python = ">3.8"
classifiers = [
 "Development Status :: 5 - Production/Stable",
 "Intended Audience :: Science/Research",
 "License :: OSI Approved :: BSD License",
 "Programming Language :: Python",
 "Programming Language :: Python :: 3",
 "Topic :: Scientific/Engineering",
 "Operating System :: OS Independent",
]
dependencies = [
 "numpy",
 "matplotlib",
 "h5py",
 "arrayfire",
 "numba",
 "scipy",
 "tqdm",
 "plotly"
]

keywords = ["signal processing", "spectra", "analysis"]

[project.urls]
"Homepage" = "https://github.com/MarkusSifft/SignalSnap"
"Bug Tracker" = "https://github.com/MarkusSifft/SignalSnap/issues"

